kubernetes/apps/audiobookshelf/audiobookshelf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: media
  labels:
    app.kubernetes.io/name: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: audiobookshelf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiobookshelf
    spec:
      containers:
      - name: audiobookshelf
        image: ghcr.io/advplyr/audiobookshelf:latest
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 768Mi
        volumeMounts:
        - name: storage
          mountPath: /config
          subPath: config
        - name: storage
          mountPath: /metadata
          subPath: metadata
        - name: storage
          mountPath: /audiobooks
          subPath: audiobooks
        - name: storage
          mountPath: /podcasts
          subPath: podcasts
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: audiobookshelf-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: media
  labels:
    app.kubernetes.io/name: audiobookshelf
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app.kubernetes.io/name: audiobookshelf
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: ab.vijaysingh.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audiobookshelf
            port:
              number: 80
